tests/Metalama.Framework.Tests.Integration/Tests/Aspects/InvalidCode/IncompleteType.t.cs
// Syntax tree verification failed.
// Error CS1031 on ``: `Type expected`
// Error CS1514 on ``: `{ expected`
// Error CS1513 on ``: `} expected`
using Metalama.Framework.Aspects;
namespace Metalama.Framework.Tests.Integration.Tests.Aspects.InvalidCode.IncompleteType;
class Aspect : [Aspect] class Target;